syntax = "proto3";

package tensorflow;

opt on go_package = "g hub.com/tensorflow/tensorflow/tensorflow/go/core/protobuf/for_core_protos_go_proto";

// So  of t  data from AllocatorStats
 ssage  mAllocatorStats {
   nt64 num_allocs = 1;
   nt64 bytes_ n_use = 2;
   nt64 peak_bytes_ n_use = 3;
   nt64 largest_alloc_s ze = 4;
  float frag ntat on_ tr c = 5;
}

 ssage  mChunk {
  u nt64 address = 1;
   nt64 s ze = 2;
   nt64 requested_s ze = 3;
   nt32 b n = 4;
  str ng op_na  = 5;
  u nt64 freed_at_count = 6;
  u nt64 act on_count = 7;
  bool  n_use = 8;
  u nt64 step_ d = 9;
}

 ssage B nSummary {
   nt32 b n = 1;
   nt64 total_bytes_ n_use = 2;
   nt64 total_bytes_ n_b n = 3;
   nt64 total_chunks_ n_use = 4;
   nt64 total_chunks_ n_b n = 5;
}

 ssage SnapShot {
  u nt64 act on_count = 1;
   nt64 s ze = 2;
}

 ssage  moryDump {
  str ng allocator_na  = 1;
  repeated B nSummary b n_summary = 2;
  repeated  mChunk chunk = 3;
  repeated SnapShot snap_shot = 4;
   mAllocatorStats stats = 5;
}
