syntax = "proto3";

package tensorflow.serv ng;
opt on cc_enable_arenas = true;

 mport "google/protobuf/wrappers.proto";

//  tadata for an  nference request such as t  model na  and vers on.
 ssage ModelSpec {
  // Requ red servable na .
  str ng na  = 1;

  // Opt onal cho ce of wh ch vers on of t  model to use.
  //
  // Recom nded to be left unset  n t  common case. Should be spec f ed only
  // w n t re  s a strong vers on cons stency requ re nt.
  //
  // W n left unspec f ed, t  system w ll serve t  best ava lable vers on.
  // T   s typ cally t  latest vers on, though dur ng vers on trans  ons,
  // notably w n serv ng on a fleet of  nstances, may be e  r t  prev ous or
  // new vers on.
  oneof vers on_cho ce {
    // Use t  spec f c vers on number.
    google.protobuf. nt64Value vers on = 2;

    // Use t  vers on assoc ated w h t  g ven label.
    str ng vers on_label = 4;
  }

  // A na d s gnature to evaluate.  f unspec f ed, t  default s gnature w ll
  // be used.
  str ng s gnature_na  = 3;
}
